# hoyolab_login_manager

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: api.rs  daily.rs  game_record.rs  lib.rs  types.rs  utils.rs
api/src/models/: account_info.rs  game_identification.rs  login_cookie.rs  mod.rs
api/src/models/common/: mod.rs
api/src/models/deserializers/: genshin_to_duration.rs  mod.rs  starrail_to_duration.rs  to_card_sign.rs  to_duration.rs  to_ongoing.rs  to_sale_state.rs  zzz_to_duration.rs
api/src/models/genshin/: daily.rs  game_record.rs
api/src/models/starrail/: daily.rs  game_record.rs
api/src/models/zzz/: daily.rs  game_record.rs
database/: Cargo.toml
database/src/: database.rs  lib.rs  results.rs
database/src/entities/: guilds.rs  mod.rs  prelude.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231122_152119_create_table_users.rs  m20231122_152152_create_table_guilds.rs
scheduler/: Cargo.toml
scheduler/src/: lib.rs
services/src/: lib.rs
src/: config.rs  errors.rs  lib.rs  main.rs  types.rs  utils.rs
src/commands/: choices.rs  cookie.rs  daily.rs  mod.rs  notify.rs  ping.rs  register.rs
src/models/: json_wrapper.rs  mod.rs
src/models/common/: daily.rs  game_record.rs
src/models/genshin/: daily.rs  game_record.rs
src/networks/: daily.rs  game_record.rs  mod.rs
src/services/: daily_claimer.rs  mod.rs  notificator.rs
