[package]
name = "hoyolab_login_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
md5 = "0.7.0"
poise = "0.5"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0"
tokio = { version = "1.34", features = ["full"] }
