[package]
name = "hoyolab_login_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ ".", "./api", "./database", "./migration", "./scheduler" ]

[dependencies]
api = { path = "api" }
database = { path = "database" }
scheduler = { path = "scheduler" }

config = "0.13"
env_logger = "0.10"
log = "0.4"
once_cell = "1.18"
poise = "0.5"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"
tokio-util = "0.7"
chrono = "0.4"
futures = "0.3"
sea-orm = "0.12.7"
