[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3.29"
tokio = { version = "1.34", features = ["rt-multi-thread"] }
tokio-util = "0.7.10"
